--- a/course-02/project/image-filter-starter-code/package.json
+++ b/course-02/project/image-filter-starter-code/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf www/ || true",
+    "start": "npm run dev",
     "build": "npm run clean && tsc && cp package.json www/package.json && mkdir www/tmp/ && cd www && zip -r Archive.zip . && cd ..",
     "dev": "ts-node-dev --respawn --transpileOnly ./src/server.ts"
   },
@@ -28,6 +29,7 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
+    "aws-sdk": "^2.581.0",
     "express": "^4.17.1",
     "jimp": "^0.6.4"
   }
